--- a/css/style.css
+++ b/css/style.css
@@ -678,7 +678,7 @@ footer .redes i:hover{
         margin: 0;
         padding: 0;
         display: grid;
-        grid-template-columns: repeat(6, auto) / repeat(1,1fr);
+        grid-template: repeat(6, auto) / repeat(1,1fr);
         grid-template-areas: 
         "nombre" 
         "empresa"
